Revert "서비스 페이지 무한스크롤 적용"