@@ -1,15 +1,11 @@
 package com.thekey.stylekeyserver.item.service;
 
-import com.thekey.stylekeyserver.item.dto.response.ApiItemPageResponse;
 import com.thekey.stylekeyserver.item.entity.Item;
 import com.thekey.stylekeyserver.item.dto.response.ApiItemResponse;
-import com.thekey.stylekeyserver.item.repository.ItemRepository;
 import com.thekey.stylekeyserver.like.service.LikeItemService;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -18,20 +14,16 @@ public class ItemService {
 
     private final ItemAdminService itemAdminService;
     private final LikeItemService likeItemService;
-    private final ItemRepository itemRepository;
 
     public ApiItemResponse getItemWithLikes(Long id) {
         Item item = itemAdminService.findById(id);
         return buildApiItemResponse(item);
     }
 
-    public ApiItemPageResponse getAllItemsWithLikes(Pageable pageable) {
-        Slice<Item> items = itemRepository.findAll(pageable);
-        List<ApiItemResponse> responses = items.getContent().stream()
+    public List<ApiItemResponse> getAllItemsWithLikes() {
+        return itemAdminService.findAll().stream()
                 .map(this::buildApiItemResponse)
-                .toList();
-
-        return ApiItemPageResponse.fromSlice(responses, items.hasNext());
+                .collect(Collectors.toList());
     }
 
     public List<ApiItemResponse> getItemWithLikesByCoordinateLookId(Long id) {
